code/pascal.output
State 24 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID SEMI routing DOT
    2        | routing DOT

    3 routing: routing_head routing_body

    4 routing_head: const_part type_part var_part routing_part

    5 const_part: CONST const_expr_list
    6           | %empty

    7 const_expr_list: const_expr_list ID EQUAL const_value SEMI
    8                | ID EQUAL const_value SEMI

    9 const_value: INTEGER
   10            | REAL
   11            | CHAR
   12            | STRING
   13            | TRUE
   14            | FALSE
   15            | MAXINT

   16 type_part: TYPE type_decl_list
   17          | %empty

   18 type_decl_list: type_decl_list type_definition
   19               | type_definition

   20 type_definition: ID EQUAL type_decl SEMI

   21 type_decl: type_decl_simple
   22          | type_decl_array
   23          | type_decl_record

   24 type_decl_simple: SYST_BOOLEAN
   25                 | SYST_CHAR
   26                 | SYST_INTEGER
   27                 | SYST_REAL
   28                 | SYST_STRING
   29                 | ID
   30                 | const_value DOT DOT const_value

   31 type_decl_array: ARRAY LB type_decl_simple RB OF type_decl_simple

   32 type_decl_record: RECORD field_decl_list END

   33 field_decl_list: field_decl_list field_decl
   34                | field_decl

   35 field_decl: name_list COLON type_decl_simple SEMI

   36 name_list: name_list COMMA ID
   37          | ID

   38 var_part: VAR var_decl_list
   39         | %empty

   40 var_decl_list: var_decl_list var_decl
   41              | var_decl

   42 var_decl: name_list COLON type_decl SEMI

   43 routing_part: routing_part function_decl
   44             | routing_part procedure_decl
   45             | function_decl
   46             | procedure_decl
   47             | %empty

   48 function_decl: function_head SEMI routing SEMI

   49 function_head: FUNCTION ID parameters COLON type_decl_simple

   50 procedure_decl: procedure_head SEMI routing SEMI

   51 procedure_head: PROCEDURE ID parameters

   52 parameters: LP para_decl_list RP
   53           | %empty

   54 para_decl_list: para_decl_list SEMI para_type_list
   55               | para_type_list

   56 para_type_list: var_para_list COLON type_decl_simple
   57               | val_para_list COLON type_decl_simple

   58 var_para_list: VAR name_list

   59 val_para_list: name_list

   60 routing_body: PBEGIN stmt_list END

   61 stmt_list: stmt_list stmt
   62          | %empty

   63 stmt: INTEGER COLON non_label_stmt
   64     | non_label_stmt

   65 non_label_stmt: assign_stmt SEMI
   66               | proc_stmt SEMI
   67               | compound_stmt
   68               | if_stmt
   69               | repeat_stmt SEMI
   70               | while_stmt
   71               | for_stmt
   72               | case_stmt
   73               | goto_stmt SEMI

   74 assign_stmt: ID ASSIGN expression
   75            | ID LB expression RB ASSIGN expression
   76            | ID DOT ID ASSIGN expression

   77 proc_stmt: ID args
   78          | SYSP_READ args
   79          | SYSP_READLN args
   80          | SYSP_WRITE args
   81          | SYSP_WRITELN args

   82 args: LP expression_list RP
   83     | %empty

   84 compound_stmt: PBEGIN stmt_list END

   85 if_stmt: IF expression THEN stmt
   86        | IF expression THEN stmt ELSE stmt

   87 repeat_stmt: REPEAT stmt_list UNTIL expression

   88 while_stmt: WHILE expression DO stmt

   89 for_stmt: FOR ID ASSIGN expression direction expression DO stmt

   90 direction: TO
   91          | DOWNTO

   92 case_stmt: CASE expression OF case_expr_list END

   93 case_expr_list: case_expr_list case_expr
   94               | case_expr

   95 case_expr: const_value COLON stmt
   96          | ID COLON stmt

   97 goto_stmt: GOTO INTEGER

   98 expression_list: expression_list COMMA expression
   99                | expression

  100 expression: expression GE expr
  101           | expression GT expr
  102           | expression LE expr
  103           | expression LT expr
  104           | expression EQUAL expr
  105           | expression UNEQUAL expr
  106           | expr

  107 expr: expr PLUS term
  108     | expr MINUS term
  109     | expr OR term
  110     | term

  111 term: term MUL factor
  112     | term DIV factor
  113     | term MOD factor
  114     | term AND factor
  115     | term IDIV factor
  116     | factor

  117 factor: ID args
  118       | const_value
  119       | LP expression RP
  120       | NOT factor
  121       | MINUS factor
  122       | ID LB expression RB
  123       | ID DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256)
NOT (258) 120
MUL (259) 111
DIV (260) 112
IDIV (261) 115
MOD (262) 113
AND (263) 114
PLUS (264) 107
MINUS (265) 108 121
OR (266) 109
DOT (267) 1 2 30 76 123
COLON (268) 35 42 49 56 57 63 95 96
COMMA (269) 36 98
SEMI (270) 1 7 8 20 35 42 48 50 54 65 66 69 73
ASSIGN (271) 74 75 76 89
EQUAL (272) 7 8 20 104
UNEQUAL (273) 105
GE (274) 100
GT (275) 101
LE (276) 102
LT (277) 103
LP (278) 52 82 119
RP (279) 52 82 119
LB (280) 31 75 122
RB (281) 31 75 122
TRUE (282) 13
FALSE (283) 14
MAXINT (284) 15
SYST_BOOLEAN (285) 24
SYST_CHAR (286) 25
SYST_INTEGER (287) 26
SYST_REAL (288) 27
SYST_STRING (289) 28
SYSP_WRITELN (290) 81
SYSP_WRITE (291) 80
SYSP_READLN (292) 79
SYSP_READ (293) 78
PROGRAM (294) 1
TYPE (295) 16
VAR (296) 38 58
CONST (297) 5
ARRAY (298) 31
RECORD (299) 32
FUNCTION (300) 49
PROCEDURE (301) 51
OF (302) 31 92
PBEGIN (303) 60 84
END (304) 32 60 84 92
IF (305) 85 86
THEN (306) 85 86
ELSE (307) 86
REPEAT (308) 87
UNTIL (309) 87
WHILE (310) 88
DO (311) 88 89
FOR (312) 89
TO (313) 90
DOWNTO (314) 91
CASE (315) 92
GOTO (316) 97
ID (317) 1 7 8 20 29 36 37 49 51 74 75 76 77 89 96 117 122 123
INTEGER (318) 9 63 97
REAL (319) 10
CHAR (320) 11
STRING (321) 12
IFX (322)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
program (69)
    on left: 1 2, on right: 0
routing (70)
    on left: 3, on right: 1 2 48 50
routing_head (71)
    on left: 4, on right: 3
const_part (72)
    on left: 5 6, on right: 4
const_expr_list (73)
    on left: 7 8, on right: 5 7
const_value (74)
    on left: 9 10 11 12 13 14 15, on right: 7 8 30 95 118
type_part (75)
    on left: 16 17, on right: 4
type_decl_list (76)
    on left: 18 19, on right: 16 18
type_definition (77)
    on left: 20, on right: 18 19
type_decl (78)
    on left: 21 22 23, on right: 20 42
type_decl_simple (79)
    on left: 24 25 26 27 28 29 30, on right: 21 31 35 49 56 57
type_decl_array (80)
    on left: 31, on right: 22
type_decl_record (81)
    on left: 32, on right: 23
field_decl_list (82)
    on left: 33 34, on right: 32 33
field_decl (83)
    on left: 35, on right: 33 34
name_list (84)
    on left: 36 37, on right: 35 36 42 58 59
var_part (85)
    on left: 38 39, on right: 4
var_decl_list (86)
    on left: 40 41, on right: 38 40
var_decl (87)
    on left: 42, on right: 40 41
routing_part (88)
    on left: 43 44 45 46 47, on right: 4 43 44
function_decl (89)
    on left: 48, on right: 43 45
function_head (90)
    on left: 49, on right: 48
procedure_decl (91)
    on left: 50, on right: 44 46
procedure_head (92)
    on left: 51, on right: 50
parameters (93)
    on left: 52 53, on right: 49 51
para_decl_list (94)
    on left: 54 55, on right: 52 54
para_type_list (95)
    on left: 56 57, on right: 54 55
var_para_list (96)
    on left: 58, on right: 56
val_para_list (97)
    on left: 59, on right: 57
routing_body (98)
    on left: 60, on right: 3
stmt_list (99)
    on left: 61 62, on right: 60 61 84 87
stmt (100)
    on left: 63 64, on right: 61 85 86 88 89 95 96
non_label_stmt (101)
    on left: 65 66 67 68 69 70 71 72 73, on right: 63 64
assign_stmt (102)
    on left: 74 75 76, on right: 65
proc_stmt (103)
    on left: 77 78 79 80 81, on right: 66
args (104)
    on left: 82 83, on right: 77 78 79 80 81 117
compound_stmt (105)
    on left: 84, on right: 67
if_stmt (106)
    on left: 85 86, on right: 68
repeat_stmt (107)
    on left: 87, on right: 69
while_stmt (108)
    on left: 88, on right: 70
for_stmt (109)
    on left: 89, on right: 71
direction (110)
    on left: 90 91, on right: 89
case_stmt (111)
    on left: 92, on right: 72
case_expr_list (112)
    on left: 93 94, on right: 92 93
case_expr (113)
    on left: 95 96, on right: 93 94
goto_stmt (114)
    on left: 97, on right: 73
expression_list (115)
    on left: 98 99, on right: 82 98
expression (116)
    on left: 100 101 102 103 104 105 106, on right: 74 75 76 85 86
    87 88 89 92 98 99 100 101 102 103 104 105 119 122
expr (117)
    on left: 107 108 109 110, on right: 100 101 102 103 104 105 106
    107 108 109
term (118)
    on left: 111 112 113 114 115 116, on right: 107 108 109 110 111
    112 113 114 115
factor (119)
    on left: 117 118 119 120 121 122 123, on right: 111 112 113 114
    115 116 120 121


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1
    CONST    shift, and go to state 2

    $default  reduce using rule 6 (const_part)

    program       go to state 3
    routing       go to state 4
    routing_head  go to state 5
    const_part    go to state 6


State 1

    1 program: PROGRAM . ID SEMI routing DOT

    ID  shift, and go to state 7


State 2

    5 const_part: CONST . const_expr_list

    ID  shift, and go to state 8

    const_expr_list  go to state 9


State 3

    0 $accept: program . $end

    $end  shift, and go to state 10


State 4

    2 program: routing . DOT

    DOT  shift, and go to state 11


State 5

    3 routing: routing_head . routing_body

    PBEGIN  shift, and go to state 12

    routing_body  go to state 13


State 6

    4 routing_head: const_part . type_part var_part routing_part

    TYPE  shift, and go to state 14

    $default  reduce using rule 17 (type_part)

    type_part  go to state 15


State 7

    1 program: PROGRAM ID . SEMI routing DOT

    SEMI  shift, and go to state 16


State 8

    8 const_expr_list: ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 17


State 9

    5 const_part: CONST const_expr_list .
    7 const_expr_list: const_expr_list . ID EQUAL const_value SEMI

    ID  shift, and go to state 18

    $default  reduce using rule 5 (const_part)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 program: routing DOT .

    $default  reduce using rule 2 (program)


State 12

   60 routing_body: PBEGIN . stmt_list END

    $default  reduce using rule 62 (stmt_list)

    stmt_list  go to state 19


State 13

    3 routing: routing_head routing_body .

    $default  reduce using rule 3 (routing)


State 14

   16 type_part: TYPE . type_decl_list

    ID  shift, and go to state 20

    type_decl_list   go to state 21
    type_definition  go to state 22


State 15

    4 routing_head: const_part type_part . var_part routing_part

    VAR  shift, and go to state 23

    $default  reduce using rule 39 (var_part)

    var_part  go to state 24


State 16

    1 program: PROGRAM ID SEMI . routing DOT

    CONST  shift, and go to state 2

    $default  reduce using rule 6 (const_part)

    routing       go to state 25
    routing_head  go to state 5
    const_part    go to state 6


State 17

    8 const_expr_list: ID EQUAL . const_value SEMI

    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 33


State 18

    7 const_expr_list: const_expr_list ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 34


State 19

   60 routing_body: PBEGIN stmt_list . END
   61 stmt_list: stmt_list . stmt

    SYSP_WRITELN  shift, and go to state 35
    SYSP_WRITE    shift, and go to state 36
    SYSP_READLN   shift, and go to state 37
    SYSP_READ     shift, and go to state 38
    PBEGIN        shift, and go to state 39
    END           shift, and go to state 40
    IF            shift, and go to state 41
    REPEAT        shift, and go to state 42
    WHILE         shift, and go to state 43
    FOR           shift, and go to state 44
    CASE          shift, and go to state 45
    GOTO          shift, and go to state 46
    ID            shift, and go to state 47
    INTEGER       shift, and go to state 48

    stmt            go to state 49
    non_label_stmt  go to state 50
    assign_stmt     go to state 51
    proc_stmt       go to state 52
    compound_stmt   go to state 53
    if_stmt         go to state 54
    repeat_stmt     go to state 55
    while_stmt      go to state 56
    for_stmt        go to state 57
    case_stmt       go to state 58
    goto_stmt       go to state 59


State 20

   20 type_definition: ID . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 60


State 21

   16 type_part: TYPE type_decl_list .
   18 type_decl_list: type_decl_list . type_definition

    ID  shift, and go to state 20

    $default  reduce using rule 16 (type_part)

    type_definition  go to state 61


State 22

   19 type_decl_list: type_definition .

    $default  reduce using rule 19 (type_decl_list)


State 23

   38 var_part: VAR . var_decl_list

    ID  shift, and go to state 62

    name_list      go to state 63
    var_decl_list  go to state 64
    var_decl       go to state 65


State 24

    4 routing_head: const_part type_part var_part . routing_part

    FUNCTION   shift, and go to state 66
    PROCEDURE  shift, and go to state 67

    FUNCTION   [reduce using rule 47 (routing_part)]
    PROCEDURE  [reduce using rule 47 (routing_part)]
    $default   reduce using rule 47 (routing_part)

    routing_part    go to state 68
    function_decl   go to state 69
    function_head   go to state 70
    procedure_decl  go to state 71
    procedure_head  go to state 72


State 25

    1 program: PROGRAM ID SEMI routing . DOT

    DOT  shift, and go to state 73


State 26

   13 const_value: TRUE .

    $default  reduce using rule 13 (const_value)


State 27

   14 const_value: FALSE .

    $default  reduce using rule 14 (const_value)


State 28

   15 const_value: MAXINT .

    $default  reduce using rule 15 (const_value)


State 29

    9 const_value: INTEGER .

    $default  reduce using rule 9 (const_value)


State 30

   10 const_value: REAL .

    $default  reduce using rule 10 (const_value)


State 31

   11 const_value: CHAR .

    $default  reduce using rule 11 (const_value)


State 32

   12 const_value: STRING .

    $default  reduce using rule 12 (const_value)


State 33

    8 const_expr_list: ID EQUAL const_value . SEMI

    SEMI  shift, and go to state 74


State 34

    7 const_expr_list: const_expr_list ID EQUAL . const_value SEMI

    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 75


State 35

   81 proc_stmt: SYSP_WRITELN . args

    LP  shift, and go to state 76

    $default  reduce using rule 83 (args)

    args  go to state 77


State 36

   80 proc_stmt: SYSP_WRITE . args

    LP  shift, and go to state 76

    $default  reduce using rule 83 (args)

    args  go to state 78


State 37

   79 proc_stmt: SYSP_READLN . args

    LP  shift, and go to state 76

    $default  reduce using rule 83 (args)

    args  go to state 79


State 38

   78 proc_stmt: SYSP_READ . args

    LP  shift, and go to state 76

    $default  reduce using rule 83 (args)

    args  go to state 80


State 39

   84 compound_stmt: PBEGIN . stmt_list END

    $default  reduce using rule 62 (stmt_list)

    stmt_list  go to state 81


State 40

   60 routing_body: PBEGIN stmt_list END .

    $default  reduce using rule 60 (routing_body)


State 41

   85 if_stmt: IF . expression THEN stmt
   86        | IF . expression THEN stmt ELSE stmt

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 87
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 42

   87 repeat_stmt: REPEAT . stmt_list UNTIL expression

    $default  reduce using rule 62 (stmt_list)

    stmt_list  go to state 91


State 43

   88 while_stmt: WHILE . expression DO stmt

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 92
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 44

   89 for_stmt: FOR . ID ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 93


State 45

   92 case_stmt: CASE . expression OF case_expr_list END

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 94
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 46

   97 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 95


State 47

   74 assign_stmt: ID . ASSIGN expression
   75            | ID . LB expression RB ASSIGN expression
   76            | ID . DOT ID ASSIGN expression
   77 proc_stmt: ID . args

    DOT     shift, and go to state 96
    ASSIGN  shift, and go to state 97
    LP      shift, and go to state 76
    LB      shift, and go to state 98

    $default  reduce using rule 83 (args)

    args  go to state 99


State 48

   63 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 100


State 49

   61 stmt_list: stmt_list stmt .

    $default  reduce using rule 61 (stmt_list)


State 50

   64 stmt: non_label_stmt .

    $default  reduce using rule 64 (stmt)


State 51

   65 non_label_stmt: assign_stmt . SEMI

    SEMI  shift, and go to state 101


State 52

   66 non_label_stmt: proc_stmt . SEMI

    SEMI  shift, and go to state 102


State 53

   67 non_label_stmt: compound_stmt .

    $default  reduce using rule 67 (non_label_stmt)


State 54

   68 non_label_stmt: if_stmt .

    $default  reduce using rule 68 (non_label_stmt)


State 55

   69 non_label_stmt: repeat_stmt . SEMI

    SEMI  shift, and go to state 103


State 56

   70 non_label_stmt: while_stmt .

    $default  reduce using rule 70 (non_label_stmt)


State 57

   71 non_label_stmt: for_stmt .

    $default  reduce using rule 71 (non_label_stmt)


State 58

   72 non_label_stmt: case_stmt .

    $default  reduce using rule 72 (non_label_stmt)


State 59

   73 non_label_stmt: goto_stmt . SEMI

    SEMI  shift, and go to state 104


State 60

   20 type_definition: ID EQUAL . type_decl SEMI

    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    MAXINT        shift, and go to state 28
    SYST_BOOLEAN  shift, and go to state 105
    SYST_CHAR     shift, and go to state 106
    SYST_INTEGER  shift, and go to state 107
    SYST_REAL     shift, and go to state 108
    SYST_STRING   shift, and go to state 109
    ARRAY         shift, and go to state 110
    RECORD        shift, and go to state 111
    ID            shift, and go to state 112
    INTEGER       shift, and go to state 29
    REAL          shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32

    const_value       go to state 113
    type_decl         go to state 114
    type_decl_simple  go to state 115
    type_decl_array   go to state 116
    type_decl_record  go to state 117


State 61

   18 type_decl_list: type_decl_list type_definition .

    $default  reduce using rule 18 (type_decl_list)


State 62

   37 name_list: ID .

    $default  reduce using rule 37 (name_list)


State 63

   36 name_list: name_list . COMMA ID
   42 var_decl: name_list . COLON type_decl SEMI

    COLON  shift, and go to state 118
    COMMA  shift, and go to state 119


State 64

   38 var_part: VAR var_decl_list .
   40 var_decl_list: var_decl_list . var_decl

    ID  shift, and go to state 62

    $default  reduce using rule 38 (var_part)

    name_list  go to state 63
    var_decl   go to state 120


State 65

   41 var_decl_list: var_decl .

    $default  reduce using rule 41 (var_decl_list)


State 66

   49 function_head: FUNCTION . ID parameters COLON type_decl_simple

    ID  shift, and go to state 121


State 67

   51 procedure_head: PROCEDURE . ID parameters

    ID  shift, and go to state 122


State 68

    4 routing_head: const_part type_part var_part routing_part .
   43 routing_part: routing_part . function_decl
   44             | routing_part . procedure_decl

    FUNCTION   shift, and go to state 66
    PROCEDURE  shift, and go to state 67

    $default  reduce using rule 4 (routing_head)

    function_decl   go to state 123
    function_head   go to state 70
    procedure_decl  go to state 124
    procedure_head  go to state 72


State 69

   45 routing_part: function_decl .

    $default  reduce using rule 45 (routing_part)


State 70

   48 function_decl: function_head . SEMI routing SEMI

    SEMI  shift, and go to state 125


State 71

   46 routing_part: procedure_decl .

    $default  reduce using rule 46 (routing_part)


State 72

   50 procedure_decl: procedure_head . SEMI routing SEMI

    SEMI  shift, and go to state 126


State 73

    1 program: PROGRAM ID SEMI routing DOT .

    $default  reduce using rule 1 (program)


State 74

    8 const_expr_list: ID EQUAL const_value SEMI .

    $default  reduce using rule 8 (const_expr_list)


State 75

    7 const_expr_list: const_expr_list ID EQUAL const_value . SEMI

    SEMI  shift, and go to state 127


State 76

   82 args: LP . expression_list RP

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value      go to state 86
    expression_list  go to state 128
    expression       go to state 129
    expr             go to state 88
    term             go to state 89
    factor           go to state 90


State 77

   81 proc_stmt: SYSP_WRITELN args .

    $default  reduce using rule 81 (proc_stmt)


State 78

   80 proc_stmt: SYSP_WRITE args .

    $default  reduce using rule 80 (proc_stmt)


State 79

   79 proc_stmt: SYSP_READLN args .

    $default  reduce using rule 79 (proc_stmt)


State 80

   78 proc_stmt: SYSP_READ args .

    $default  reduce using rule 78 (proc_stmt)


State 81

   61 stmt_list: stmt_list . stmt
   84 compound_stmt: PBEGIN stmt_list . END

    SYSP_WRITELN  shift, and go to state 35
    SYSP_WRITE    shift, and go to state 36
    SYSP_READLN   shift, and go to state 37
    SYSP_READ     shift, and go to state 38
    PBEGIN        shift, and go to state 39
    END           shift, and go to state 130
    IF            shift, and go to state 41
    REPEAT        shift, and go to state 42
    WHILE         shift, and go to state 43
    FOR           shift, and go to state 44
    CASE          shift, and go to state 45
    GOTO          shift, and go to state 46
    ID            shift, and go to state 47
    INTEGER       shift, and go to state 48

    stmt            go to state 49
    non_label_stmt  go to state 50
    assign_stmt     go to state 51
    proc_stmt       go to state 52
    compound_stmt   go to state 53
    if_stmt         go to state 54
    repeat_stmt     go to state 55
    while_stmt      go to state 56
    for_stmt        go to state 57
    case_stmt       go to state 58
    goto_stmt       go to state 59


State 82

  120 factor: NOT . factor

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    factor       go to state 131


State 83

  121 factor: MINUS . factor

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    factor       go to state 132


State 84

  119 factor: LP . expression RP

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 133
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 85

  117 factor: ID . args
  122       | ID . LB expression RB
  123       | ID . DOT ID

    DOT  shift, and go to state 134
    LP   shift, and go to state 76
    LB   shift, and go to state 135

    $default  reduce using rule 83 (args)

    args  go to state 136


State 86

  118 factor: const_value .

    $default  reduce using rule 118 (factor)


State 87

   85 if_stmt: IF expression . THEN stmt
   86        | IF expression . THEN stmt ELSE stmt
  100 expression: expression . GE expr
  101           | expression . GT expr
  102           | expression . LE expr
  103           | expression . LT expr
  104           | expression . EQUAL expr
  105           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 137
    UNEQUAL  shift, and go to state 138
    GE       shift, and go to state 139
    GT       shift, and go to state 140
    LE       shift, and go to state 141
    LT       shift, and go to state 142
    THEN     shift, and go to state 143


State 88

  106 expression: expr .
  107 expr: expr . PLUS term
  108     | expr . MINUS term
  109     | expr . OR term

    PLUS   shift, and go to state 144
    MINUS  shift, and go to state 145
    OR     shift, and go to state 146

    $default  reduce using rule 106 (expression)


State 89

  110 expr: term .
  111 term: term . MUL factor
  112     | term . DIV factor
  113     | term . MOD factor
  114     | term . AND factor
  115     | term . IDIV factor

    MUL   shift, and go to state 147
    DIV   shift, and go to state 148
    IDIV  shift, and go to state 149
    MOD   shift, and go to state 150
    AND   shift, and go to state 151

    $default  reduce using rule 110 (expr)


State 90

  116 term: factor .

    $default  reduce using rule 116 (term)


State 91

   61 stmt_list: stmt_list . stmt
   87 repeat_stmt: REPEAT stmt_list . UNTIL expression

    SYSP_WRITELN  shift, and go to state 35
    SYSP_WRITE    shift, and go to state 36
    SYSP_READLN   shift, and go to state 37
    SYSP_READ     shift, and go to state 38
    PBEGIN        shift, and go to state 39
    IF            shift, and go to state 41
    REPEAT        shift, and go to state 42
    UNTIL         shift, and go to state 152
    WHILE         shift, and go to state 43
    FOR           shift, and go to state 44
    CASE          shift, and go to state 45
    GOTO          shift, and go to state 46
    ID            shift, and go to state 47
    INTEGER       shift, and go to state 48

    stmt            go to state 49
    non_label_stmt  go to state 50
    assign_stmt     go to state 51
    proc_stmt       go to state 52
    compound_stmt   go to state 53
    if_stmt         go to state 54
    repeat_stmt     go to state 55
    while_stmt      go to state 56
    for_stmt        go to state 57
    case_stmt       go to state 58
    goto_stmt       go to state 59


State 92

   88 while_stmt: WHILE expression . DO stmt
  100 expression: expression . GE expr
  101           | expression . GT expr
  102           | expression . LE expr
  103           | expression . LT expr
  104           | expression . EQUAL expr
  105           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 137
    UNEQUAL  shift, and go to state 138
    GE       shift, and go to state 139
    GT       shift, and go to state 140
    LE       shift, and go to state 141
    LT       shift, and go to state 142
    DO       shift, and go to state 153


State 93

   89 for_stmt: FOR ID . ASSIGN expression direction expression DO stmt

    ASSIGN  shift, and go to state 154


State 94

   92 case_stmt: CASE expression . OF case_expr_list END
  100 expression: expression . GE expr
  101           | expression . GT expr
  102           | expression . LE expr
  103           | expression . LT expr
  104           | expression . EQUAL expr
  105           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 137
    UNEQUAL  shift, and go to state 138
    GE       shift, and go to state 139
    GT       shift, and go to state 140
    LE       shift, and go to state 141
    LT       shift, and go to state 142
    OF       shift, and go to state 155


State 95

   97 goto_stmt: GOTO INTEGER .

    $default  reduce using rule 97 (goto_stmt)


State 96

   76 assign_stmt: ID DOT . ID ASSIGN expression

    ID  shift, and go to state 156


State 97

   74 assign_stmt: ID ASSIGN . expression

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 157
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 98

   75 assign_stmt: ID LB . expression RB ASSIGN expression

    NOT      shift, and go to state 82
    MINUS    shift, and go to state 83
    LP       shift, and go to state 84
    TRUE     shift, and go to state 26
    FALSE    shift, and go to state 27
    MAXINT   shift, and go to state 28
    ID       shift, and go to state 85
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32

    const_value  go to state 86
    expression   go to state 158
    expr         go to state 88
    term         go to state 89
    factor       go to state 90


State 99

   77 proc_stmt: ID args .

    $default  reduce using rule 77 (proc_stmt)


State 100

   63 stmt: INTEGER COLON . non_label_stmt

    SYSP_WRITELN  shift, and go to state 35
    SYSP_WRITE    shift, and go to state 36
    SYSP_READLN   shift, and go to state 37
    SYSP_READ     shift, and go to state 38
    PBEGIN        shift, and go to state 39
    IF            shift, and go to state 41
    REPEAT        shift, and go to state 42
    WHILE         shift, and go to state 43
    FOR           shift, and go to state 44
    CASE          shift, and go to state 45
    GOTO          shift, and go to state 46
    ID            shift, and go to state 47

    non_label_stmt  go to state 159
    assign_stmt     go to state 51
    proc_stmt       go to state 52
    compound_stmt   go to state 53
    if_stmt         go to state 54
    repeat_stmt     go to state 55
    while_stmt      go to state 56
    for_stmt        go to state 57
    case_stmt       go to state 58
    goto_stmt       go to state 59


State 101

   65 non_label_stmt: assign_stmt SEMI .

    $default  reduce using rule 65 (non_label_stmt)


State 102

   66 non_label_stmt: proc_stmt SEMI .

    $default  reduce using rule 66 (non_label_stmt)


State 103

   69 non_label_stmt: repeat_stmt SEMI .

    $default  reduce using rule 69 (non_label_stmt)


State 104

   73 non_label_stmt: goto_stmt SEMI .

    $default  reduce using rule 73 (non_label_stmt)


State 105

   24 type_decl_simple: SYST_BOOLEAN .

    $default  reduce using rule 24 (type_decl_simple)


State 106

   25 type_decl_simple: SYST_CHAR .

    $default  reduce using rule 25 (type_decl_simple)


State 107

   26 type_decl_simple: SYST_INTEGER .

    $default  reduce using rule 26 (type_decl_simple)


State 108

   27 type_decl_simple: SYST_REAL .

    $default  reduce using rule 27 (type_decl_simple)


State 109

   28 type_decl_simple: SYST_STRING .

    $default  reduce using rule 28 (type_decl_simple)


State 110

   31 type_decl_array: ARRAY . LB type_decl_simple RB OF type_decl_simple

    LB  shift, and go to state 160


State 111

   32 type_decl_record: RECORD . field_decl_list END

    ID  shift, and go to state 62

    field_decl_list  go to state 161
    field_decl       go to state 162
    name_list        go to state 163


State 112

   29 type_decl_simple: ID .

    $default  reduce using rule 29 (type_decl_simple)


State 113

   30 type_decl_simple: const_value . DOT DOT const_value

    DOT  shift, and go to state 164


State 114

   20 type_definition: ID EQUAL type_decl . SEMI

    SEMI  shift, and go to state 165


State 115

   21 type_decl: type_decl_simple .

    $default  reduce using rule 21 (type_decl)


State 116

   22 type_decl: type_decl_array .

    $default  reduce using rule 22 (type_decl)


State 117

   23 type_decl: type_decl_record .

    $default  reduce using rule 23 (type_decl)


State 118

   42 var_decl: name_list COLON . type_decl SEMI
